src/test/wacc/Main/invalid/syntaxErr/InvalidSyntaxerrArrayTests.scala
package wacc

import org.scalatest.flatspec.AnyFlatSpec
import org.scalatest.matchers.should.Matchers.*

class InvalidSyntaxerrArrayTests extends AnyFlatSpec {
  val dir = "src/test/examples/invalid/syntaxErr/array/"

  it should "pass arrayExpr.wacc" in pending /*{
    runFrontend(Array(dir+"arrayExpr.wacc"))._1 shouldBe 100
  }*/

}